force-app/main/default/objects/Salary_Table__c/Salary_Table__c.object-meta.xml
<CustomObject>
    <label>Salary Table</label>
    <nameField>
        <label>Salary Grade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary Table</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>