force-app/main/default/objects/Salary_Table__c/fields/I_RS_HR_System_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_HR_System_Group_ID__c</fullName>
    <description>How a particular grade and group combination, e.g. HEO1-1, is represented in the HR System. Used when matching Salary Table entries to Contacts, i.e. when collecting base salary for Current La Trobe Staff Budget Line Items</description>
    <label>HR System Group Identifier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>