force-app/main/default/objects/Salary_Table__c/fields/I_RS_Salary_Grade_Group__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Salary_Grade_Group__c</fullName>
    <description>e.g. &apos;HEO&apos; or &apos;Casual Staff&apos;</description>
    <label>Salary Grade Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>