force-app/main/default/objects/Salary_Table__c/fields/I_RS_Salary_Grade_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Salary_Grade_Group_Number__c</fullName>
    <description>e.g. if salary grade is &apos;HEO-1&apos;, enter &apos;1&apos;</description>
    <inlineHelpText>e.g. if salary grade is &apos;HEO-1&apos;, enter &apos;1&apos;</inlineHelpText>
    <label>Salary Grade Group Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>