force-app/main/default/objects/Salary_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Salary_Grade_Group__c</columns>
    <columns>I_RS_Salary_Grade_Group_Number__c</columns>
    <columns>I_RS_HR_System_Group_ID__c</columns>
    <columns>I_RS_Year__c</columns>
    <columns>I_RS_Salary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>